src/test/deca/context/valid/self/Assign.deca
{
int x=2;
println(x);
}