src/test/deca/context/invalid/self/method.deca
class A {
    int method(){
        return 1;
    }
}

{
    A a = new A();
    println(a.m);
}